mouse party done

--- a/vanilla-mouse-party/index.html
+++ b/vanilla-mouse-party/index.html
@@ -53,12 +53,10 @@
         }
     </style>
     <div id="wrap">
-        <h1>Party Time!</h1>
+        <h1>dont capitalize your m's</h1>
     </div>
 </body>
 
-<script>
-
-</script>
+<script src="./index.js"></script>
 
 </html>
